added bleu score

--- a/QuestionGenerator - Organised.ipynb
+++ b/QuestionGenerator - Organised.ipynb
@@ -699,7 +699,7 @@
     "        else: \n",
     "            qgen.inferFromBatch([output], 0, 1, shuffle = False, printGroundTruthQuestion = False)\n",
     "            \n",
-    "# Takes as input -> batch of labels and outputs in matrix form, gives mean bleu score for the batch\n",
+    "    # Takes as input -> batch of labels and outputs in matrix form, gives mean bleu score for the batch\n",
     "    def bleu_score_batch(labels, outputs):\n",
     "        batch_bleu_score = 0\n",
     "        #np.where(hypothesis =='<EOS>')[0][0]\n",
@@ -709,10 +709,9 @@
     "            batch_bleu_score += nltk.translate.bleu_score.sentence_bleu(gt, out)\n",
     "        return(batch_bleu_score/labels.shape[0])\n",
     "    \n",
-    "# Takes as input 2 sentences and outputs the bleu score    \n",
+    "    # Takes as input 2 sentences and outputs the bleu score\n",
     "    def blue_score(label, output):\n",
-    "    return(nltk.translate.bleu_score.sentence_bleu(label,output# Takes as input 2 sentences and outputs the bleu score))\n",
-    "\n"
+    "    return(nltk.translate.bleu_score.sentence_bleu(label,output))\n"
    ]
   },
   {
